// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SystemStatusCard should not render hasLastCheckIn 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-4"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-4"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            System status
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Current state
            </dt>
            <dd
              class=""
            >
              Active
            </dd>
            <dt
              class=""
            >
              Registered
            </dt>
            <dd
              class=""
            >
              01 Apr 2014 00:00 UTC
            </dd>
            <dt
              class=""
            >
              RHC
            </dt>
            <dd
              class=""
            >
              Connected
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`SystemStatusCard should not render hasRHC 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-6"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-6"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            System status
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Current state
            </dt>
            <dd
              class=""
            >
              Active
            </dd>
            <dt
              class=""
            >
              Registered
            </dt>
            <dd
              class=""
            >
              01 Apr 2014 00:00 UTC
            </dd>
            <dt
              class=""
            >
              Last upload
            </dt>
            <dd
              class=""
            >
              01 Jun 2014 00:00 UTC
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`SystemStatusCard should not render hasRegistered 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-5"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-5"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            System status
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Current state
            </dt>
            <dd
              class=""
            >
              Active
            </dd>
            <dt
              class=""
            >
              Last upload
            </dt>
            <dd
              class=""
            >
              01 Jun 2014 00:00 UTC
            </dd>
            <dt
              class=""
            >
              RHC
            </dt>
            <dd
              class=""
            >
              Connected
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`SystemStatusCard should not render hasState 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-3"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-3"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            System status
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Registered
            </dt>
            <dd
              class=""
            >
              01 Apr 2014 00:00 UTC
            </dd>
            <dt
              class=""
            >
              Last upload
            </dt>
            <dd
              class=""
            >
              01 Jun 2014 00:00 UTC
            </dd>
            <dt
              class=""
            >
              RHC
            </dt>
            <dd
              class=""
            >
              Connected
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`SystemStatusCard should render correctly - no data 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-1"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-1"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            System status
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Current state
            </dt>
            <dd
              class=""
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
            <dt
              class=""
            >
              Registered
            </dt>
            <dd
              class=""
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
            <dt
              class=""
            >
              Last upload
            </dt>
            <dd
              class=""
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
            <dt
              class=""
            >
              RHC
            </dt>
            <dd
              class=""
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`SystemStatusCard should render correctly with data 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-2"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-2"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            System status
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Current state
            </dt>
            <dd
              class=""
            >
              Active
            </dd>
            <dt
              class=""
            >
              Registered
            </dt>
            <dd
              class=""
            >
              01 Apr 2014 00:00 UTC
            </dd>
            <dt
              class=""
            >
              Last upload
            </dt>
            <dd
              class=""
            >
              01 Jun 2014 00:00 UTC
            </dd>
            <dt
              class=""
            >
              RHC
            </dt>
            <dd
              class=""
            >
              Connected
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;
